syntax = "proto3";

package order;

option go_package = "./proto/order;order";

service OrderService {
  rpc CreateOrder (OrderInput) returns (Order);
  rpc GetOrderByID (OrderID) returns (Order);
  rpc UpdateOrderStatus (OrderStatusUpdate) returns (Order);
  rpc GetOrdersByUser (UserID) returns (OrderList);
}

message OrderID {
  string id = 1;
}

message UserID {
  string user_id = 1;
}

message OrderStatusUpdate {
  string id = 1;
  string status = 2;
}

message OrderProductInput {
  string product_id = 1;
  int32 quantity = 2;
}

message OrderInput {
  string user_id = 1;
  repeated OrderProductInput products = 2;
}

message OrderProduct {
  string product_id = 1;
  int32 quantity = 2;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderProduct products = 3;
  string status = 4;
  int64 created_at = 5;
}

message OrderList {
  repeated Order orders = 1;
}
